# WebDataApiProxyManager

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  README_zh.md  docker-compose.yml
.github/workflows/: ci.yml  docker-image.yml
crates/admin-api/: Cargo.toml
crates/admin-api/src/: auth.rs  egress_proxies.rs  lib.rs  platform_api_keys.rs  provider_accounts.rs
crates/app/: Cargo.toml
crates/app/src/: background.rs  frontend.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: auth.rs  client_pool.rs  lib.rs  persistence.rs  webhook.rs
crates/providers/exa/: Cargo.toml
crates/providers/exa/src/: lib.rs
crates/providers/firecrawl/: Cargo.toml
crates/providers/firecrawl/src/: lib.rs
crates/providers/jina/: Cargo.toml
crates/providers/jina/src/: lib.rs
crates/providers/tavily/: Cargo.toml
crates/providers/tavily/src/: lib.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: alerts.rs  lib.rs  platform_keys.rs
crates/web/app/: .env.example  eslint.config.js  index.html  package.json  vite.config.ts
crates/web/app/src/: api.ts  app.tsx  i18n.tsx  index.css  router.tsx  types.ts
crates/web/app/src/api/: alerts.ts  async-jobs.ts  audit-logs.ts  auth.ts  core.ts  egress-proxies.ts  platform-api-keys.ts  provider-accounts.ts  reports.ts  request-logs.ts
crates/web/app/src/features/alerts/: alert-events-panel.tsx  alert-rules-panel.tsx  create-alert-rule-panel.tsx  hooks.ts  page.tsx  utils.ts
crates/web/app/src/features/api-keys/: create-key-drawer.tsx  keys-table.tsx  page.tsx  proxy-endpoints-panel.tsx  utils.ts
crates/web/app/src/features/async-jobs/: page.tsx
crates/web/app/src/features/audit-logs/: page.tsx
crates/web/app/src/hooks/: use-copy-feedback.ts
crates/web/app/src/i18n/messages/: core.ts  (+6 more)
crates/web/app/src/lib/: format.ts  provider.ts
crates/web/app/src/styles/: base.css  components.css  layout.css  responsive.css
crates/web/app/src/ui/: app-header.tsx  auth-page.tsx  settings-page.tsx  shared.tsx
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs
db/migrations/: 0001_initial.sql
(+57 files in other folders)
