[package]
name = "wdapm-core"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["formatting", "parsing", "serde"] }
uuid = { version = "1.22.0", features = ["serde", "v7"] }
