[package]
name = "wdapm-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
reqwest = { version = "0.13.2", features = ["json", "socks"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
time = "0.3.47"
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = "0.1.44"
uuid = { version = "1.22.0", features = ["v7"] }
hex = "0.4.3"
sha2 = "0.10"
wdapm-core = { version = "0.1.0", path = "../core" }
wdapm-provider-firecrawl = { version = "0.1.0", path = "../providers/firecrawl" }
wdapm-scheduler = { version = "0.1.0", path = "../scheduler" }
wdapm-storage = { version = "0.1.0", path = "../storage" }
wdapm-worker = { version = "0.1.0", path = "../worker" }
tokio = { version = "1.50.0", features = ["rt", "sync"] }
